@@ -1,3 +1,7 @@
+2008-01-27  Cedric GESTES  <gestes_c@epita.fr>
+
+	* src/systray-menu-functions.c: now the size of the window is optimal
+
 2008-01-23  GESTES Cedric  <gestes_c@epita.fr>
 	* support the new cairo-applet
 
